# Cocoa-Compiler

./: CHANGELOG.md  README.md  cocoa-compiler.cabal  stack.yaml
app/: Main.hs  ParserTests.hs
src/: Ast.hs  Compiler.hs  Parser.hs
src/Ast/: Shared.hs  Statement.hs
src/Compiler/: Ast.hs  Backend.hs  FileGraph.hs  FileGraph.hs~  Parser.hs  SSA.hs  TypeChecker.hs  TypeChecker.hs~
src/Compiler/Ast/: Class.hs  Class.hs~  Expr.hs  Expr.hs~  File.hs  File.hs~  Method.hs  Method.hs~  Shared.hs  Shared.hs~  Statement.hs  Statement.hs~
src/Compiler/Backend/: Bytecode.hs  ClassFile.hs
src/Compiler/Parser/: Class.hs  Class.hs~  Expr.hs  File.hs  File.hs~  Method.hs  Method.hs~  Shared.hs  Shared.hs~  Statement.hs  Statement.hs~
src/Compiler/Parser/Expr/: Base.hs  Compound.hs  Compound.hs~  Ops.hs  Shared.hs  Shared.hs~
src/Compiler/SSA/: Class.hs  File.hs  Method.hs  Shared.hs  Statement.hs
src/Parser/: Shared.hs  Statement.hs
test/: ParserSpec.hs  ParserSpec.hs~
test-lib/: Apple.cocoa  Pineapple.cocoa  Stack.cocoa
test/Compiler/Parser/: ClassSpec.hs  FileSpec.hs  MethodSpec.hs  StatementSpec.hs  StatementSpec.hs~
test/Compiler/Parser/Expr/: Ops.hs~  OpsSpec.hs  OpsSpec.hs~  SimpleSpec.hs
